@@ -1,5 +1,7 @@
 # Half-Life 2 Deathmatch - popular computer game
 # Pattern quality: good veryfast
+# 
+# By Clayton Macleod <cherrytwist TA gmail.com>
 #
 # Please post to l7-filter-developers@lists.sf.net as to whether this works
 # for you or not.  If you believe it could be improved please post your
