@@ -1,11 +1,18 @@
-# Quake 2, Quake 3, Quake World, Half Life - popular computer games.
+# Half Life 1 engine games (HL 1, Quake 2/3/World, Counterstrike 1.6, etc.)
 # Pattern quality: good veryfast
+#
+# Contributed by Laurens Blankers <laurens AT blankersfamily.com>, who says:
 #
 # This pattern has been tested with QuakeWorld (2.30), Quake 2 (3.20), 
 # Quake 3 (1.32), and Half-life (1.1.1.0). But may also work on other
 # games based on the Quake engine.
 #
-# Contributed by Laurens Blankers <laurens AT blankersfamily.com>
+# Clayton Macleod <cherrytwist A gmail.com> says:
+# [This should match] Counter-Strike v1.6, [...] the slightly updated
+# Counter-Strike: Condition Zero, and the game Day Of Defeat, Team
+# Fortress Classic, Deathmatch Classic, Ricochet, Half-Life [1] Deathmatch,
+# and I imagine all the other 3rd party mods that also use this engine
+# will match that pattern.
 #
 # Please post to l7-filter-developers@lists.sf.net as to whether it works
 # for you or not.  If you believe it could be improved please post your
