@@ -10,14 +10,15 @@ extract()
 }
 
 if [ ! $1 ]; then
-	echo Please specify a pattern or pattern file.
+	echo Syntax: ./timeit.sh patternfile [all]
+	echo "all" tests against all characters, not just printable ones.
 	exit 1
 fi
 
-if [ -x ./randprintable ] && [ -x ./test_speed ]; then
+if [ -x ./randchars ] && [ -x ./randprintable ] && [ -x ./test_speed ]; then
 	true
 else
-	echo Can\'t find randprintable or test_speed.
+	echo Can\'t find randchars, randprintable or test_speed.
 	echo They should be in this directory.  Did you say \"make\"?
 	exit 1
 fi
@@ -26,5 +27,9 @@ echo
 
 for arg in $@; do
 	echo $arg
-	./randprintable | time ./test_speed "`extract $arg`"
+	if [ $2 ]; then
+		./randchars | time ./test_speed "`extract $arg`"
+	else
+		./randprintable | time ./test_speed "`extract $arg`"
+	fi
 done
